<resources>
    <string name="app_name">Touristico</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="devices">Devices</string>
    <string name="guestbook">Guestbook</string>
    <string name="attractions">Attractions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_start">StartActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ulazak_u_aplikaciju">Ulazak u aplikaciju</string>
    <string name="admin">Admin</string>


    <!--Login-->
    <string name="welcome_back">Welcome back admin!</string>
    <string name="login">Login</string>

    <!--Register-->

    <!--Devices-->
    <string name="add_device">Add device</string>
    <string name="add_description">Add description</string>
    <string name="add_new_device">ADD NEW DEVICE</string>
    <string name="list_of_current_devices">List of current devices:</string>
    <string name="add_your_device">Add your device</string>
    <string name="upload_photo_of_device">Upload photo of device:</string>

    <!--Shops-->

    <!--Attractions-->

    <!--Beaches-->

    <!--Guestbook-->

    <!--Errors-->


</resources>