<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home" android:icon="@drawable/ic_baseline_home_work_24"
        android:enabled="true"
        android:id="@+id/homeFragment"
        />
    <item
        android:title="@string/devices" android:icon="@drawable/ic_baseline_devices_other_24"
        android:enabled="true"
        android:id="@+id/devicesFragment"
        />
    <item
        android:title="@string/guestbook" android:icon="@drawable/ic_baseline_menu_book_24"
        android:enabled="true"
        android:id="@+id/guestbookFragment"
        />
    <item
        android:title="Chat" android:icon="@drawable/ic_baseline_chat_bubble_24"
        android:enabled="true"
        android:id="@+id/chatFragment"
        />
    <item
        android:title="@string/attractions" android:icon="@drawable/ic_baseline_emoji_transportation_24"
        android:enabled="true"
        android:id="@+id/attractionsFragment"
        />
</menu>