<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainNavigationScreen">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.touristico.guest.HomeFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_mainNavigationScreen"
            app:destination="@id/mainNavigationScreen"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>

    <fragment
        android:id="@+id/attractionsFragment"
        android:name="com.example.touristico.guest.attractions.AttractionsFragment"
        android:label="@string/attractions"
        tools:layout="@layout/fragment_attractions">
        <action
            android:id="@+id/action_attractionsFragment_to_beachesFragment"
            app:destination="@id/beachesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_attractionsFragment_to_attractionsDetailFragment"
            app:destination="@id/attractionsDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_attractionsFragment_to_shopsFragment"
            app:destination="@id/shopsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_attractionsFragment_to_mainNavigationScreen"
            app:destination="@id/mainNavigationScreen"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_attractionsFragment_to_restaurantsFragment"
            app:destination="@id/restaurantsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/guestbookFragment"
        android:name="com.example.touristico.guest.guestbook.GuestbookFragment"
        android:label="@string/guestbook"
        tools:layout="@layout/fragment_guestbook">
        <action
            android:id="@+id/action_guestbookFragment_to_mainNavigationScreen"
            app:destination="@id/mainNavigationScreen"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/devicesFragment"
        android:name="com.example.touristico.guest.devices.DevicesFragment"
        android:label="@string/devices"
        tools:layout="@layout/fragment_devices" >
        <action
            android:id="@+id/action_devicesFragment_to_devicesDetailFragment"
            app:destination="@id/devicesDetailFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_devicesFragment_to_mainNavigationScreen"
            app:destination="@id/mainNavigationScreen"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/devicesDetailFragment"
        android:name="com.example.touristico.guest.devices.DevicesDetailFragment"
        android:label="fragment_devices_detail"
        tools:layout="@layout/fragment_devices_detail" >
        <argument
            android:name="deviceId"
            app:argType="string" />
        <action
            android:id="@+id/action_devicesDetailFragment_to_devicesFragment"
            app:destination="@id/devicesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/beachesFragment"
        android:name="com.example.touristico.guest.beaches.BeachesFragment"
        android:label="fragment_beaches"
        tools:layout="@layout/fragment_beaches" >
        <action
            android:id="@+id/action_beachesFragment_to_attractionsFragment"
            app:destination="@id/attractionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/attractionsDetailFragment"
        android:name="com.example.touristico.guest.attractions.AttractionsDetailFragment"
        android:label="fragment_attractions_detail"
        tools:layout="@layout/fragment_attractions_detail" >
        <action
            android:id="@+id/action_attractionsDetailFragment_to_attractionsFragment"
            app:destination="@id/attractionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/shopsFragment"
        android:name="com.example.touristico.guest.shops.ShopsFragment"
        android:label="fragment_shops"
        tools:layout="@layout/fragment_shops" >
        <action
            android:id="@+id/action_shopsFragment_to_attractionsFragment"
            app:destination="@id/attractionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.example.touristico.guest.chat.ChatFragment"
        android:label="fragment_chat"
        tools:layout="@layout/fragment_chat" >
        <action
            android:id="@+id/action_chatFragment_to_mainNavigationScreen"
            app:destination="@id/mainNavigationScreen"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/mainNavigationScreen"
        android:name="com.example.touristico.guest.MainNavigationScreen"
        android:label="fragment_main_navigation_screen"
        tools:layout="@layout/fragment_main_navigation_screen" >
        <action
            android:id="@+id/action_mainNavigationScreen_to_homeFragment"
            app:destination="@id/homeFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_mainNavigationScreen_to_chatFragment"
            app:destination="@id/chatFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_mainNavigationScreen_to_attractionsFragment"
            app:destination="@id/attractionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_mainNavigationScreen_to_devicesFragment"
            app:destination="@id/devicesFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
        <action
            android:id="@+id/action_mainNavigationScreen_to_guestbookFragment"
            app:destination="@id/guestbookFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/restaurantsFragment"
        android:name="com.example.touristico.guest.restaurants.RestaurantsFragment"
        android:label="fragment_restaurants"
        tools:layout="@layout/fragment_restaurants" >
        <action
            android:id="@+id/action_restaurantsFragment_to_attractionsFragment"
            app:destination="@id/attractionsFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
</navigation>